sdp: Do not add email line by default

As specified in rfc4566 email line is optional

See https://bugzilla.gnome.org/show_bug.cgi?id=697162